--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.15.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
