--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/masked-view": "0.1.10",
     "axios": "^0.24.0",
     "expo": "~42.0.1",
-    "expo-app-loading": "^1.1.2",
+    "expo-app-loading": "1.1.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
